--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -7,6 +7,7 @@ on:
     paths:
     - 'QuadraticEquationTesting/Program.cs'
     - 'QuadraticEquationTesting/QuadraticEquationTesting.csproj'
+    - 'QuadraticEquationTesting/QuadraticEquationTesting.sln'
 
 env:
   DOTNET_VERSION: '6.0.401' # The .NET SDK version to use
