--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -1,12 +1,38 @@
-steps:
-- uses: actions/checkout@v3
-- name: Setup dotnet
-  uses: actions/setup-dotnet@v3
-  with:
-    dotnet-version: '6.0.x'
-- name: Install dependencies
-  run: dotnet restore
-- name: Build
-  run: dotnet build
-- name: Test with the dotnet CLI
-  run: dotnet test
+name: build and test
+
+on:
+  push:
+  pull_request:
+    branches: [ master ]
+    paths:
+    - 'QuadraticEquationTesting/Program.cs'
+    - 'QuadraticEquationTesting/QuadraticEquationTesting.csproj'
+    - 'QuadraticEquationTesting/QuadraticEquationTesting.sln'
+
+env:
+  DOTNET_VERSION: '6.0.401' # The .NET SDK version to use
+
+jobs:
+  build-and-test:
+
+    name: build-and-test-${{matrix.os}}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest]
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: ${{ env.DOTNET_VERSION }}
+
+    - name: Install dependencies
+      run: dotnet restore
+      
+    - name: Build
+      run: dotnet build --configuration Release --no-restore
+    
+    - name: Test
+      run: dotnet test --no-restore --verbosity normal
